--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@
 #   * Official Russian Documentation: http://nginx.org/ru/docs/
 
 user  www-data;
-worker_processes  4;
+worker_processes  2;
 
 error_log  /var/log/nginx/error.log;
 #error_log  /var/log/nginx/error.log  notice;
@@ -13,7 +13,7 @@ pid        /run/nginx.pid;
 
 
 events {
-    worker_connections  4096;
+    worker_connections  1024;
 }
 
 
@@ -33,7 +33,8 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
-    #gzip  on;
+    gzip  on;
+    gzip_types       application/json;
 
     index   index.html index.htm;
 
