--- a/nginx.conf
+++ b/nginx.conf
@@ -27,13 +27,17 @@ http {
 
     access_log  /var/log/nginx/access.log  main;
 
-    sendfile        on;
-    #tcp_nopush     on;
-
-    #keepalive_timeout  0;
-    keepalive_timeout  65;
+    keepalive_timeout 65;
+    keepalive_requests 100000;
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
 
     gzip  on;
+    gzip_http_version 1.1;
+    gzip_comp_level    6;
+    gzip_proxied any;
+    gzip_vary on;
     gzip_types       application/json;
 
     index   index.html index.htm;
